Style fix for chrome bug with flickering scrollbar.

--- a/plugins/easyimage/styles/easyimage.css
+++ b/plugins/easyimage/styles/easyimage.css
@@ -48,6 +48,13 @@ The outline is not a part of the element's dimensions, we have to use a border a
 	min-width: 10em;
 }
 
+/*
+Overwrite 25% in classic editor to prevent existing this bug https://bugs.chromium.org/p/chromium/issues/detail?id=803045
+*/
+body.cke_editable .cke_widget_wrapper_easyimage-side {
+	max-width: 25vw;
+}
+
 .easyimage .cke_widget_editable {
 	background-color: #f7f7f7;
 	/* Add border so when caption is focused, blue border does not cause flickering. */
